// Copyright 2024 Gravitational, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.userprovisioning.v1;

import "teleport/header/v1/metadata.proto";
import "teleport/legacy/types/wrappers/wrappers.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/userprovisioning/v1;userprovisioningv1";

// StaticHostUser is a resource that represents host users that should be
// created on matching nodes.
message StaticHostUser {
  // kind is a resource kind.
  string kind = 1;
  // sub_kind is an optional resource sub kind, used in some resources.
  string sub_kind = 2;
  // version is the resource version. It must be specified.
  // Supported values are: `v1`.
  string version = 3;
  // metadata is resource metadata.
  teleport.header.v1.Metadata metadata = 4;
  // spec is the static host user spec.
  StaticHostUserSpec spec = 5;
}

// StaticHostUserSpec is the static host user spec.
message StaticHostUserSpec {
  // login is the login to create on the node.
  string login = 1;
  // groups is a list of additional groups to add the user to.
  repeated string groups = 2;
  // sudoers is a list of sudoer entries to add.
  repeated string sudoers = 3;
  // uid is the new user's uid.
  string uid = 4;
  // gid is the new user's gid.
  string gid = 5;
  // node_labels is a map of node labels that will create a user from this
  // resource.
  wrappers.LabelValues node_labels = 6;
  // node_labels_expression is a predicate expression to create a user from
  // this resource.
  string node_labels_expression = 7;
}
